fixed 2D-Editor overflow issue in Chrome

--- a/src/app/media-components/components/audio/audioviewer/audioviewer.component.css
+++ b/src/app/media-components/components/audio/audioviewer/audioviewer.component.css
@@ -21,8 +21,9 @@
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
-    /* width:100%;
-    height:100%;*/
+    display: flex;
+    flex-direction: column;
+    flex: auto;
 }
 
 .graphicscanvas {
